fixing footer z-index problem

--- a/resources/assets/sass/_global/_global.scss
+++ b/resources/assets/sass/_global/_global.scss
@@ -40,7 +40,7 @@ footer {
   bottom: 0;
   //height:250px;
   width: 100%;
-  z-index: 1;
+  z-index: -1;
 
   @media #{$mobile} {
     //height:100px;
